# warren-the-cryptobot

./: .envrc  .gitignore  .tool-versions  LICENSE.md  Makefile  NOTEPAD.md  README.md  README.srt  TODO.md  brownie-config.yaml  package-lock.json  package.json  pyproject.toml  requirements-dev.txt  requirements.txt  routes.yml  setup.cfg  tokens.yml
.direnv/python-3.10.5/: pyvenv.cfg
.github/workflows/: tests.yml
artifacts/mooniswap/: IMooniFactory.json  IMooniswap.json
artifacts/smardex/: Factory.json  Pair.json
artifacts/stableswap/: IStableSwap3Pool.json
artifacts/tokens/: IERC20.json  IERC677BridgeToken.json  IUSDT.json  LIDO.json  WXDAI.json
contracts/: FlashQuery.sol
exchanges/curvefi/: registry_exchange.py
exchanges/mooniswap/: factory.py  get_tokens_from_address.py  mooniswap.py
exchanges/stableswap/: tripool.py
explorer/core/: cli.py  uniswap_v2_explorer.py
explorer/models/: pair.py
fluffykitten/: routes.yml
fluffykitten/core/: cli.py  router.py
fluffykitten/routes/: base_route.py  uniswap_v2_route.py  uniswap_v3_route.py
grid_trading/: __main__.py
grid_trading/core/: cli.py  create_service.py  grid_trading_service.py
grid_trading/models/: order.py  strategy_dao.py  strategy_dto.py  strategy_status.py
grid_trading/services/: grid_trading_service.py
metadata/: tokens.yml
oracle/: __main__.py
scripts/: send_testnet_ether_to_wallet.py
tests/: conftest.py  test_flash_query.py
tokens/: base_token.py  dai.py  gno.py  ldo.py  link.py  st_eth.py  usdc.py  usdt.py  wbtc.py  weth9.py  wxdai.py
warren/: __main__.py
(+169 files in other folders)
