[metadata]
name = warren-the-cryptobot
version = 0.0.1
description = Trading order book for Uniswap v3 (Ethereum)
author = Matéu.sh <mateuszsokola@gmail.com>
url = https://github.com/stakefish/web3-utils
long_description = file: README.rst
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Financial and Insurance Industry
    License :: OSI Approved :: MIT License
    Natural Language :: English
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
python_requires = == 3.10.5
packages = find:
install_requires =
    web3
    typer[all]
    rich
    pydantic
    tenacity

[options.extras_require]
tests =
    black
    eth-brownie
    pytest-asyncio
    pytest-mock

[options.packages.find]
exclude =
    build*
    tests*
    scripts*
    docs*
    test_*